modified timeline, fixed background overflow
- added react-chrono as a dependency for ease of creation of timeline
- background image size is set to cover so that contents do not overflow
  the background

--- a/src/components/timeline/Timeline.css
+++ b/src/components/timeline/Timeline.css
@@ -1,61 +1,29 @@
-.wrap{
+.wrap {
   max-width: 1210px;
   margin: 50px auto;
   padding: 0 20px;
   position: relative;
 }
 
-.wrap .center-line{
+.wrap .center-line {
   position: absolute;
   height: 100%;
   width: 4px;
-  background: black;
   left: 50%;
   top: 20px;
   transform: translateX(-50%);
 }
 
-.wrap .row{
-  display: flex;
-}
-
-.wrap .row-1{
+.wrap .row-1 {
   justify-content: flex-start;
 }
 
-.wrap .row-2{
+.wrap .row-2 {
   justify-content: flex-end;
 }
 
-.wrap .row section{
-  background: rgb(237, 237, 237);
-  border-radius: 5px;
-  width: calc(50% - 40px);
-  padding: 15px;
-  position: relative;
-}
-
-.wrap .row section::before{
-  position: absolute;
-  content: "";
-  height: 15px;
-  width: 15px;
-  background: rgb(27, 120, 50);
-  top: 28px;
-  z-index: -1;
-  transform: rotate(45deg);
-}
-
-.row-1 section::before{
-  right: -7px;
-}
-
-.row-2 section::before{
-  left: -7px;
-}
-
-.row section .icon,
-.center-line .scroll-icon{
+/* section .icon,
+.center-line .scroll-icon {
   position: absolute;
   background: #f1f1f1;
   height: 40px;
@@ -65,44 +33,30 @@
   border-radius: 50%;
   color: black;
   font-size: 20px;
-  box-shadow: 0 0 0 4px #fff, inset 0 2px 0 rgba(0,0,0,0.08), 0 3px 0 4px rgba(0,0,0,0.05);
-}
+  box-shadow: 0 0 0 4px #fff, inset 0 2px 0 rgba(0, 0, 0, 0.08),
+    0 3px 0 4px rgba(0, 0, 0, 0.05);
+} */
 
-.center-line .scroll-icon{
+.center-line .scroll-icon {
   bottom: 0px;
   left: 50%;
   font-size: 15px;
   transform: translateX(-50%);
 }
 
-.row-1 section .icon{
+.row-1 section .icon {
   top: 15px;
   right: -60px;
 }
 
-.row-2 section .icon{
+.row-2 section .icon {
   top: 15px;
   left: -60px;
 }
 
-.row section .details,
-.row section .bottom{
+section .details,
+section .bottom {
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-.row section .details .title{
-  font-size: 19px;
-  font-weight: 600;
-}
-
-.row section p{
-  margin: 10px 0 17px 0;
-}
-
-@media (max-width: 710px) {
-  .row section .details{
-    flex-direction: column;
-  }
 }
